--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    # Install our python package before building the docs
+    install:
+      - method: pip
+        path: .
     # You can also specify other tool versions:
     # nodejs: "20"
     # rust: "1.70"
@@ -16,6 +19,7 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
+  fail_on_warning: true
   configuration: docs/conf.py
   # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
   # builder: "dirhtml"
@@ -23,6 +27,9 @@ sphinx:
   # fail_on_warning: true
 
 # Optionally build your docs in additional formats such as PDF and ePub
+formats:
+  - pdf
+  - epub
 # formats:
 #    - pdf
 #    - epub
@@ -33,3 +40,5 @@ sphinx:
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
+
+
